Bug 513729 - [OAuth] Browser page does not fit

--- a/stylesheets/_core/template/footer.less
+++ b/stylesheets/_core/template/footer.less
@@ -175,7 +175,7 @@ footer#solstice-footer {
 
 body.solstice-footer-min{
   margin-bottom:36px;
-  position:initial;
+  position:static;
   @media screen and ( max-width: @screen-xs-max) {
     margin-bottom:51px;
   }
